# http-api-problem

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD  README.md  rustfmt.toml
.github/workflows/: CI.yml
derive-into-api-error/: Cargo.toml
derive-into-api-error/src/: lib.rs
examples/: additional_fields.rs
http-api-problem-derive/: Cargo.toml  README.md
src/: api_error.rs  lib.rs  test.rs
