[package]
name = "http-api-problem"
version = "0.52.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
description = "A library to create HTTP error response content for APIs based on RFC 7807"
repository = "https://github.com/chridou/http-api-problem"
homepage = "https://github.com/chridou/http-api-problem"
documentation = "https://docs.rs/http-api-problem"
readme = "README.md"
keywords = ["http", "api", "json", "error", "7807"]
categories = ["web-programming"]
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
http = { version = "0.2" }
hyper = { version = "0.14", optional = true }
actix-web-crate = { package = "actix-web", version = "3", optional = true }
actix = { version = "0.12", optional = true }
rocket = { version = "0.5.0-rc.1", optional = true, default-features = false }
warp = { version = "0.3", optional = true, default-features = false }
salvo = { version = "0.16", optional = true, default-features = false }
tide = { version = "0.16", optional = true, default-features = false }

[features]
default = []
actix-web = ["actix-web-crate", "actix"]
api-error = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
