[package]
name = "http-api-problem"
version = "0.59.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
description = "A library to create HTTP error response content for APIs based on RFC 7807"
repository = "https://github.com/chridou/http-api-problem"
homepage = "https://github.com/chridou/http-api-problem"
documentation = "https://docs.rs/http-api-problem"
readme = "README.md"
keywords = ["http", "api", "json", "error", "7807"]
categories = ["web-programming"]
license = "Apache-2.0/MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
http = { version = "1.0" }
hyper = { version = "1.0", optional = true }
actix-web-crate = { package = "actix-web", version = "4", optional = true }
actix = { version = "0.13", optional = true }
rocket = { version = "0.5.0-rc.2", optional = true, default-features = false }
warp = { version = "0.3", optional = true, default-features = false }
salvo = { version = "0.68.0", optional = true, default-features = false }
tide = { version = "0.16", optional = true, default-features = false }
axum-core = { version = "^0.5.0", optional = true }
http-api-problem-derive = { version = "0.1.0", path = "http-api-problem-derive", optional = true }
schemars = { version = "0.8.10", optional = true }
rocket_okapi = { version = ">= 0.8.0-rc.2, < 0.10", optional = true }

[features]
default = []
actix-web = ["actix-web-crate", "actix"]
api-error = ["http-api-problem-derive"]
json-schema = ["schemars"]
rocket-okapi = ["dep:rocket_okapi", "rocket", "json-schema"]
axum = ["axum-core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
