[package]
name = "http-api-problem-derive"
version = "0.1.0"
description = "A support crate for HTTP-API-PROBLEM"
license = "Apache-2.0/MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.12"
